--- a/src/app/superadmin/superadmin.component.html
+++ b/src/app/superadmin/superadmin.component.html
@@ -1,9 +1,9 @@
-<div class="container-flex mt-3 mb-3">
-  <div class="btn btn-success float-right"  data-toggle="modal" data-target="#createuser">
+<div class="container mt-3 mb-3">
+  <div class="btn btn-success float-right" data-toggle="modal" data-target="#createuser">
     <i class="fa fa-plus"> </i> Add +
   </div>
 </div>
-<div class="container-flex">
+<div class="container">
   <table class="table table-striped mt-3">
     <thead>
       <tr>
@@ -12,7 +12,7 @@
         <th scope="col">Role</th>
         <th scope="col">Status</th>
         <th scope="col">Actions</th>
-        
+
       </tr>
     </thead>
     <tbody>
@@ -21,24 +21,25 @@
         <td> {{user.userName}}</td>
         <td> {{user.role}}</td>
         <td>{{user.active}}</td>
-        <td> 
-        
+        <td>
+
           <span class="btn btn-danger rounded-circle rounded-circle-sm" (click)="deleteUser(user.userId,user.role)">
-           <!-- <i class="fa fa-car">   </i> -->
-          X
+            <i class="fa fa-trash"> </i>
+
           </span>
-          
+
         </td>
       </tr>
     </tbody>
   </table>
-  
+
 </div>
 
 
 
 <!-- Modal -->
-<div class="modal fade" id="createuser" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="createuser" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  aria-hidden="true">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -48,7 +49,7 @@
         </button>
       </div>
       <div class="modal-body">
-        
+
 
 
 
@@ -56,28 +57,31 @@
           <div class="form-row">
             <div class="form-group col-md-6">
               <label for="inputEmail4">User ID</label>
-              <input type="email" class="form-control" id="inputEmail4" placeholder="User ID" formControlName="userName">
+              <input type="email" class="form-control" id="inputEmail4" placeholder="User ID"
+                formControlName="userName">
             </div>
             <div class="form-group col-md-6">
               <label for="inputState">Role</label>
               <select id="inputState" class="form-control" formControlName="role">
-                <option selected>User</option>
-                <option>Admin</option>
+                <option selected>user</option>
+                <option>admin</option>
               </select>
             </div>
           </div>
-          
-          
+
+
           <div class="form-row">
             <div class="form-group col-md-6">
               <label for="inputPassword4">Password</label>
-              <input type="password" class="form-control" id="inputPassword" placeholder="Password" formControlName="password">
+              <input type="password" class="form-control" id="inputPassword" placeholder="Password"
+                formControlName="password">
             </div>
             <div class="form-group col-md-6">
               <label for="inputPassword2">Re-enter Password</label>
-              <input type="password" class="form-control" id="inputPassword2" placeholder="Re-enter Password" formControlName="password2">
+              <input type="password" class="form-control" id="inputPassword2" placeholder="Re-enter Password"
+                formControlName="password2">
             </div>
-            
+
           </div>
         </form>
 
@@ -87,7 +91,8 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary"  data-dismiss="modal" (click)="createUser(userForm.value)">Create</button>
+        <button type="button" class="btn btn-primary" data-dismiss="modal"
+          (click)="createUser(userForm.value)">Create</button>
       </div>
     </div>
   </div>
