--- a/src/app/allcontract/allcontract.component.html
+++ b/src/app/allcontract/allcontract.component.html
@@ -37,6 +37,11 @@
                         class="btn btn-primary rounded-circle rounded-circle-sm mr-2">
                         <i class="fa fa-money"> </i>
                     </span>
+                    <span [routerLink]="['/contract/memo/'+item['contractId']]"
+                        class="btn btn-primary rounded-circle rounded-circle-sm mr-2">
+                        <!-- <i class="fa fa-one"> </i> -->
+                        <b>1</b>
+                    </span>
                     <span class="btn btn-danger rounded-circle rounded-circle-sm">
                         <i class="fa fa-trash"> </i>
 
