--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -1,5 +1,90 @@
 <div class="container">
-    <form class="form">
+    <div class="jumbotron">
 
+        <p>
+            Create first phase payment
+        </p>
+    </div>
+    <form class="form" [formGroup]="memoForm">
+
+        <div class="mb-5">
+
+            <div class="mt-3 form-row col-4">
+                <label for="batch">Batch</label>
+                <input type="text" id="batch" class="form-control" formControlName="batch">
+            </div>
+
+            <div class="mt-3 form-row col-4">
+                <label for="batch">Date </label>
+                <input type="date" id="batch" class="form-control" formControlName="date">
+            </div>
+
+            <div class="mt-3 form-row col-4">
+                <label for="batch">StaffIdFrom</label>
+                <select type="text" id="batch" class="form-control" formControlName="staffIdFrom">
+                    <option value="null">-Select-</option>
+                </select>
+            </div>
+
+            <div class="mt-3 form-row col-4">
+                <label for="batch"> StaffIdTo</label>
+                <select type="text" id="batch" class="form-control" formControlName="staffIdTo">
+                    <option value="null">-Select-</option>
+                </select>
+            </div>
+
+            <div class="mt-3 form-row col-4">
+                <label for="batch">StaffIdThrough</label>
+                <select type="text" id="batch" class="form-control" formControlName="staffIdThrough">
+                    <option value="null">-Select-</option>
+                </select>
+            </div>
+
+            <div class="mt-3 form-row col-4">
+                <label for="batch">SO</label>
+                <select type="text" id="batch" class="form-control" formControlName="so">
+                    <option value="null">-Select-</option>
+                </select>
+            </div>
+
+        </div>
+
+
+        <div class="my-5">
+
+            <div class="mt-3 form-row">
+                <label for="">1. Request letter is submitted with all the required documents and it is completed.
+                </label>
+                <input id="" type="text" class="form-control" formControlName="requestLetter">
+            </div>
+
+            <div class="mt-3 form-row">
+                <label for="batch">2. Has SO submitted consent letter to Local Level. </label>
+                <input id="batch" type="text" class="form-control" formControlName="consentLetter">
+            </div>
+
+            <div class="mt-3 form-row">
+                <label for="batch">3. Has SO submitted field survey data with required outputs (both soft copy and hard
+                    copy). </label>
+                <input id="batch" type="text" class="form-control" formControlName="survey">
+            </div>
+
+            <div class="mt-3 form-row">
+                <label for="batch">4. SO has opened the SO Bank Account for the sole use of funds to be received from
+                    the
+                    Fund Board. The evidence regarding this is submitted and acceptable. </label>
+                <input id="batch" type="text" class="form-control" formControlName="bankAccount">
+            </div>
+            <div class="mt-3 form-row">
+                <label for="batch">5. All staffs have been appointed as specified in the contract and it is acceptable.
+                    Evidence, in the form of copies of the appointment letters have been submitted which are acceptable.
+                </label>
+                <input id="batch" type="text" class="form-control" formControlName="staffs">
+            </div>
+            <div class="mt-12 form-row">
+                <input class="btn btn-success mt-5" type="submit" (click)="onSubmit(memoForm.value)">
+            </div>
+
+        </div>
     </form>
 </div>
