--- a/src/app/allmemo/allmemo.component.html
+++ b/src/app/allmemo/allmemo.component.html
@@ -29,7 +29,7 @@
                 <td>{{item.so}}</td>
                 <td>{{item.createdOn}}</td>
                 <td>
-                    <span [routerLink]="['/contract/'+item['contractId']]" routerLinkActive="router-link-active"
+                    <span [routerLink]="['/memo/'+item['memoId']]" routerLinkActive="router-link-active"
                         class="btn btn-warning rounded-circle rounded-circle-sm mr-2">
                         <i class="fa fa-eye"> </i>
                     </span>
