--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -11,7 +11,12 @@
 
             <div class="mt-3 form-row col-4">
                 <label for="batch">Batch</label>
-                <input type="text" id="batch" class="form-control" formControlName="batch">
+                <select type="text" id="batch" class="form-control" formControlName="batch"
+                    (change)="getContractByBatchAndSo(memoForm.value)">
+                    <option value="">-Select-</option>
+                    <option *ngFor="let item of allBatches" [value]="item.batchId">{{item.batchNo}}</option>
+
+                </select>
             </div>
 
             <div class="mt-3 form-row col-4">
@@ -22,28 +27,38 @@
             <div class="mt-3 form-row col-4">
                 <label for="batch">StaffIdFrom</label>
                 <select type="text" id="batch" class="form-control" formControlName="staffIdFrom">
-                    <option value="null">-Select-</option>
+                    <option value="">-Select-</option>
+                    <option *ngFor="let item of allStaffs" [value]="item.staffId">{{item.name}}</option>
+
                 </select>
             </div>
 
             <div class="mt-3 form-row col-4">
                 <label for="batch"> StaffIdTo</label>
                 <select type="text" id="batch" class="form-control" formControlName="staffIdTo">
-                    <option value="null">-Select-</option>
+                    <option value="">-Select-</option>
+                    <option *ngFor="let item of allStaffs" [value]="item.staffId">{{item.name}}</option>
+
                 </select>
             </div>
 
             <div class="mt-3 form-row col-4">
                 <label for="batch">StaffIdThrough</label>
                 <select type="text" id="batch" class="form-control" formControlName="staffIdThrough">
-                    <option value="null">-Select-</option>
+                    <option value="">-Select-</option>
+                    <option *ngFor="let item of allStaffs" [value]="item.staffId">{{item.name}}</option>
+
                 </select>
             </div>
 
             <div class="mt-3 form-row col-4">
                 <label for="batch">SO</label>
-                <select type="text" id="batch" class="form-control" formControlName="so">
-                    <option value="null">-Select-</option>
+                <select type="text" id="batch" class="form-control" formControlName="so"
+                    (change)="getContractByBatchAndSo(memoForm.value)">
+                    <option value="">-Select-</option>
+                    <option *ngFor="let item of allSo" [value]="item.soId">{{item.name}}</option>
+
+
                 </select>
             </div>
 
